--- a/style.css
+++ b/style.css
@@ -34,16 +34,15 @@ body {
     justify-content: center;
     align-items: center;
     font-size:16px;
-    display: flex;;
+    display: flex;
+    height: 100vh;
 }
 
 .card {
     background: var(--white);
-    border-radius: 10px;
-    margin: 100px auto;
-    padding: 1em;
+    border-radius: 15px;
+    padding: 1.5em;
     width: 350px;
-    border-radius: 10px;
     overflow: hidden;
     border:1px solid black;
     box-shadow: 10px 10px 0 black;
@@ -63,10 +62,11 @@ body {
     /* font-size: s12px; */
     font-weight: 800;
     margin-bottom: 15px;
+    font-size: .8em;
 }
 
 .card__date {
-    font-size: .9em;
+    font-size: .8em;
     margin-bottom: 15px;
 }
 
@@ -78,7 +78,8 @@ body {
 .card__description {
     color: var(--gray-500);
     margin-bottom: 20px;
-    line-height: 1.5em;
+    line-height: 1.2em;
+    font-size: .9em;
 }
 
 .card__author {
@@ -89,12 +90,13 @@ body {
 .card__author-image {
     border-radius: 50%;
     margin-right: 10px;
-    height: 40px;
-    width: 40px;s
+    height: 35px;
+    width: 35px;
 }
 
 .card__author-name {
     font-weight:800;
+    font-size:.9em;
 }
 
 footer {position:fixed; bottom:10px; right:10px;}
